--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -6,3 +6,12 @@
 	border-radius: 5px;
 	padding: 10px;
 }
+
+.error {
+	color: red;
+	font-size: 20px;
+	background-color: lightgrey;
+	border: 3px solid red;
+	border-radius: 5px;
+	padding: 10px;
+}
